2018-07-01  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* android/jni/graphics.[ch]: Fixed an issue with labels of the console keys
  being unreadable on high-resolution displays. They are now scaled to screen
  resolution.
* android/jni/androidinput.c: Fixed a bug in computing coordinates of console
  key presses, which could result in a different key being pressed than
  expected.
  Moved variables to reduce their scope, for better readability.
  

2018-06-22  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOC/NEWS: Added an entry about addition of DOC/BUILD.windows.
* DOC/NEWS, DOC/TODO, DOC/USAGE, .cvsignore, Makefile.in,
  android/jni/Android.mk.in, atari.[ch], atari800.man, configure.ac,
  dc/Mahefile.dc, devices.c, emuos.*, esc.c, memory.c,
  roms/altirra_5200_os.[ch], win32/msc/Makefile: Removed EmuOS.


2018-06-10  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOC/BUILD.windows, DOC/INSTALL: Extracted Windows-specific instructions
  to a separate document. Added instructions on building with MSYS2.


2018-06-05  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* android/jni/androidinput.[ch], android/jni/graphics.c, android/jni/jni.c,
  android/jni/platform.c, android/jni/sound.c: Fixed
  -Wimplicit-function-declaration warnings.
* android/jni/androidinput.[ch]: Fixed -Wimplicit-int, -Wunused-comparison,
  -Wbitwise-op-parentheses, -Wtautological-constant-out-of-range-compare and
  -Wparentheses warnings.
* android/jni/androidinput.c, android/jni/graphics.c: Fixed -Wswitch warnings.
* android/jni/androidinput.c, android/jni/jni.c: Fixed -Wdangling-else warnings.
* android/jni/jni.c: Fixed -Wpointer-sign and -Wreturn-type warnings.
* android/jni/keys.inc: Disabled many -Winitializer-overrides warnings.
* atari.c: Fixed a -Wtautological-constant-out-of-range-compare warning.
* ui.c: Fixed a -Wformat-truncation warning.
* monitor.c: Fixed a -Wformat warning.
* dos/vga_gfx.c, img_tape.c: Fixed -Wstringop-truncation warnings.
* ide.c: Fixed a -Wmultistatement-macros warning.